Fix text area prepending with white spaces

--- a/lib/forth_evaluator_web/live/editor.html.heex
+++ b/lib/forth_evaluator_web/live/editor.html.heex
@@ -5,9 +5,7 @@
       class="resize-none w-1/2 h-full font-semibold p-5"
       placeholder="Write your code here..."
       spellcheck="false"
-    >
-      {@current_program.text}
-    </textarea>
+    >{@current_program.text}</textarea>
 
     <div class="flex flex-col w-1/2 h-full gap-2">
       <div class="flex justify-start items-center w-full gap-3">
