--- a/lib/forth_evaluator_web/live/editor.html.heex
+++ b/lib/forth_evaluator_web/live/editor.html.heex
@@ -37,7 +37,7 @@
             <div class="w-1/4">{program.status}</div>
             <div class="w-1/2 overflow-hidden">{program.text}</div>
             <div class="w-1/4 text-right">
-              {NaiveDateTime.to_string(program.last_update) |> String.slice(0..18)}
+              {NaiveDateTime.to_string(program.updated_at) |> String.slice(0..18)}
             </div>
           </div>
         <% end %>
