Fix text wrapping in program history

--- a/lib/forth_evaluator_web/live/editor.html.heex
+++ b/lib/forth_evaluator_web/live/editor.html.heex
@@ -35,7 +35,7 @@
             phx-value-id={program.id}
           >
             <div class="w-1/4">{program.status}</div>
-            <div class="w-1/2 overflow-hidden">{program.text}</div>
+            <div class="w-1/2 text-nowrap overflow-hidden">{program.text}</div>
             <div class="w-1/4 text-right">
               {NaiveDateTime.to_string(program.updated_at) |> String.slice(0..18)}
             </div>
